@@ -7,7 +7,7 @@ namespace StructureSynth {
 		State::State() : 
 			matrix(SyntopiaCore::Math::Matrix4f::Identity()), 
 			hsv(SyntopiaCore::Math::Vector3f(0,1.0f,1.0f)), 
-			alpha(1.0f), prevMatrix(0)  { 
+			alpha(1.0f), prevMatrix(0), seed(0)  { 
 			
 		}
 
@@ -16,6 +16,7 @@ namespace StructureSynth {
 			this->hsv = rhs.hsv;
 			this->alpha = rhs.alpha;
 			this->maxDepths = rhs.maxDepths;
+			this->seed = rhs.seed;
 			if (rhs.prevMatrix) {
 				delete(this->prevMatrix);
 				this->prevMatrix = new SyntopiaCore::Math::Matrix4f();
@@ -37,7 +38,7 @@ namespace StructureSynth {
 		
 		State::State(const State& rhs) : matrix(rhs.matrix), 
 			hsv(rhs.hsv), 
-			alpha(rhs.alpha), maxDepths(rhs.maxDepths), prevMatrix(0) {
+			alpha(rhs.alpha), maxDepths(rhs.maxDepths), prevMatrix(0), seed(rhs.seed) {
 
 			if (rhs.prevMatrix) {
 				delete(this->prevMatrix);
