@@ -4,6 +4,8 @@ Next version:
 - Show hour-glass when making long operations (before progress when rendering...)    
 - Better sphere implementation (remember transformation thing...)
 
+Add Synchronized random
+
 Request:
 - Remember file extension.
 
